# aiagentaz

./: .coverage  .gitignore  Changelog.md  LICENSE  pyproject.toml  readme.md  setup.py
.github/workflows/: build_docs.yml  ci.yml
aiagentaz/: __init__.py
aiagentaz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aiagentaz/core/: chain.py  clients.py  request.py
aiagentaz/core/graph/: abc.py  node.py
aiagentaz/docs/: conf.py
aiagentaz/domain/: __init__.py  agent.py  agent.pyi  chain.py  chain.pyi
aiagentaz/domain/clients/: anthropic.py  anthropic.pyi  gemini.py  gemini.pyi  openai.py  openai.pyi
aiagentaz/domain/graph/operators/: basicoperator.py
aiagentaz/tests/: __init__.py  test_gemini.py  test_openai.py
docs/: agent.rst  chain.rst  clients.rst  conf.py  graph.rst  index.rst
docs/_autosummary/: aiagentaz.domain.agent.Agent.generate.rst  aiagentaz.domain.agent.Agent.get_client.rst  aiagentaz.domain.agent.Agent.validate_client.rst  index.rst
docs/_autosummary/aiagentaz.domain.agent/: aiagentaz.domain.agent.Agent.generate.rst
tests/: __init__.py  test_anthropic.py  test_chain.py  test_gemini.py  test_graph.py  test_openai.py
