# This is the configuration file for the aiagentaz Python package.
# It specifies the build system, project metadata, dependencies, and optional dependencies.

[build-system]
requires = ["setuptools>=42", "wheel"]  # Required packages for building the project
build-backend = "setuptools.build_meta"  # Backend used for building the package

[project]
name = "aiagentaz"  # Name of the package
version = "0.2.0"  # Current version of the package
description = "A Python package for easily interacting with various AI services."  # Brief description of the package
readme = { file = "README.md", content-type = "text/markdown" }  # Readme file and its content type
authors = [
    { name = "Md Tahseen Anam", email = "tahseen.adit@gmail.com" }  # Author information
]
classifiers = [
    "Development Status :: 3 - Alpha",  # Current development status
    "Intended Audience :: Developers",  # Target audience
    "License :: OSI Approved :: BSD License",  # License type
    "Programming Language :: Python :: 3",  # General support for Python 3
    "Programming Language :: Python :: 3.7",  # Minimum required Python version
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai",  # Dependency for OpenAI API
    "google-generativeai",  # Dependency for Google Generative AI
    "anthropic" # Dependency for anthropic
]
requires-python = ">=3.7"  # Minimum required Python version

[project.optional-dependencies]
docs = [
    "sphinx",  # Documentation generator
    "sphinx-rtd-theme",  # Read the Docs theme for Sphinx
    "numpydoc",
    "pydata-sphinx-theme"
]

tests = [
    "pytest",
    "pytest-cov",
    "codecov"
]
